--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:scss": "wp-scripts lint-style 'sass/**/*.scss'",
     "lint:js": "wp-scripts lint-js 'js/*.js'",
     "bundle": "dir-archiver --src . --dest ../_s.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map yarn.lock",
-    "tw:build": "npx tailwindcss -i ./css/index.css -o ./css/styles.css --minify"
+    "tw:build": "npx tailwindcss -i ./css/index.css -o ./css/style.css --minify"
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.7",
