--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "Theme"
   ],
   "scripts": {
-    "watch": "node-sass sass/ -o ./ --source-map true --output-style expanded --indent-type tab --indent-width 1 -w",
-    "lint:scss": "wp-scripts lint-style 'sass/**/*.scss'",
-    "lint:js": "wp-scripts lint-js 'js/*.js'",
-    "bundle": "dir-archiver --src . --dest ../_s.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map yarn.lock",
+    "tw:watch": "npx tailwindcss -i ./css/index.css -o ./css/style.css --watch",
     "tw:build": "npx tailwindcss -i ./css/index.css -o ./css/style.css --minify"
   },
   "dependencies": {
